# TinyGit

./: .clang-tidy  .cmake-format.yaml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  README.md  your_program.sh
.codecrafters/: run.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
include/: git.hpp
include/commands/: cat_file.hpp  command.hpp  commit_tree.hpp  hash_object.hpp  init.hpp  ls_tree.hpp  write_tree.hpp
include/objects/: blob.hpp  commit.hpp  object_store.hpp  tree.hpp
scripts/: lint.sh
src/: git.hpp  main.cpp
src/commands/: cat_file.cpp  cat_file.hpp  command.cpp  command.hpp  commit_tree.cpp  commit_tree.hpp  hash_object.cpp  hash_object.hpp  init.cpp  init.hpp  ls_tree.cpp  ls_tree.hpp  write_tree.cpp  write_tree.hpp
src/core/: object_store.cpp  object_store.hpp
src/objects/: blob.cpp  blob.hpp  commit.cpp  commit.hpp  object_store.cpp  object_store.hpp  tree.cpp  tree.hpp
src/util/: hex.cpp  hex.hpp
